--- a/Android/lab04/2019212212236_苏桐渤.md
+++ b/Android/lab04/2019212212236_苏桐渤.md
@@ -1,7 +1,15 @@
+
+<center>
+    <h2>《Android应用开发》课程</h2>  
+    <h2>实验报告</h2>
+
+**姓名** 苏桐渤 &ensp; **学号** 2019212212236 &ensp; **班级** 软工192
+**实验名称** 活动的生命周期 &ensp; **实验日期** 2021/09/28
+</center>
+
 ### 实验目的
 
-了解并掌握活动的生命周期方法，通过记录日志的方式理解活动的生命周期，同时掌握
-日志工具 LogCat 的使用方法。
+了解并掌握活动的生命周期方法，通过记录日志的方式理解活动的生命周期，同时掌握日志工具 LogCat 的使用方法。
 
 ### 实验内容
 
