--- a/Android/lab06/2019212212236_苏桐渤.md
+++ b/Android/lab06/2019212212236_苏桐渤.md
@@ -4,5 +4,372 @@
     <h2>实验报告</h2>
 
 **姓名** 苏桐渤 &ensp; **学号** 2019212212236 &ensp; **班级** 软工192
-**实验名称** 基本UI组件的使用 &ensp; **实验日期** 2021/09/30
+**实验名称** ListView 控件的使用 &ensp; **实验日期** 2021/10/16
 </center>
+
+
+#### 实验目的
+
+了解和掌握 ListView 控件的使用方式；了解 ListView 使用过程中的优化方法。掌握自定义布局列表项的方式方法和事件处理方法；掌握 ListView 的数据更新显示方法。
+
+#### 实验内容和要求
+
+（1）使用 ListView 组件显示水果名称及图片，并处理常规的一些事件；
+（2）增加需要显示的数据项和搜索功能。
+
+#### 实验过程及运行结果
+
+一、利用附件提供的素材图片，参考教材 P114-121 页的内容，完成实验基本代码的编写、调试和运行（70 分）
+二、修改代码，每行增加水果的中文名称显示（10 分）
+
+1. 创建布局 fruit.xml，三个子控件分别用来显示水果图片、英文名和中文名
+
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/fruit_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/fruit_english_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="center" />
+
+    <TextView
+        android:id="@+id/fruit_chinese_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="center" />
+
+</LinearLayout>
+```
+
+
+2. 在 activity_main.xml 中添加 ListView
+
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".MainActivity"> 
+
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
+```
+
+3. 定义一个实体类，作为 ListView 适配器的适配类型。
+
+```java
+public class Fruit {
+
+    private int imageId;
+    private String englishName;
+    private String chineseName;
+
+    public Fruit(int imageId, String englishName, String chineseName) {
+        this.imageId = imageId;
+        this.englishName = englishName;
+        this.chineseName = chineseName;
+    }
+
+    public String getChineseName() {
+        return chineseName;
+    }
+
+    public String getEnglishName() {
+        return englishName;
+    }
+
+    public int getImageId() {
+        return imageId;
+    }
+}
+```
+
+4. 为Fruit顶一个继承 ArrayAdapter的适配器
+
+```java 
+public class FruitAdapter extends ArrayAdapter<Fruit> {
+
+    private int resourceId;
+
+    public FruitAdapter(Context context, int resource, List<Fruit> objects) {
+        super(context, resource, objects);
+        resourceId = resource;
+    }
+
+    @Override
+    public View getView(int position, View convertView, ViewGroup parent) {
+        Fruit fruit = getItem(position);
+
+        View view;
+        ViewHolder viewHolder;
+
+        if (convertView == null) {
+            view = LayoutInflater.from(getContext()).inflate(resourceId, parent, false);
+            viewHolder = new ViewHolder(view.findViewById(R.id.fruit_image), view.findViewById(R.id.fruit_english_name), view.findViewById(R.id.fruit_chinese_name));
+            view.setTag(viewHolder);
+        } else {
+            view = convertView;
+            viewHolder = (ViewHolder) view.getTag();
+        }
+
+        viewHolder.fruitImage.setImageResource(fruit.getImageId());
+        viewHolder.fruitEnglishName.setText(fruit.getEnglishName());
+        viewHolder.fruitChineseName.setText(fruit.getChineseName());
+
+        return view;
+    }
+
+    class ViewHolder {
+        ImageView fruitImage;
+        TextView fruitEnglishName;
+        TextView fruitChineseName;
+
+        public ViewHolder(ImageView fruitImage, TextView fruitEnglishName, TextView fruitChineseName) {
+            this.fruitImage = fruitImage;
+            this.fruitEnglishName = fruitEnglishName;
+            this.fruitChineseName = fruitChineseName;
+        }
+    }
+}
+```
+
+5. 在 onCreate() 中创建 FruitAdapter 对象，并将 Fruit 作为适配器传递给 ListView
+
+- initFruits() 创建所有的 Fruit 对象，并存到数组当中
+- listInit() 将所有的 Fruit 对象添加到 list 中
+- FruitAdapter fruitAdapter = new FruitAdapter(,,); 创建适配器
+- listView.setAdapter(fruitAdapter); 添加到 listView 中
+
+```java
+private int[] imagesId = new int[]{
+        R.drawable.apple_pic, R.drawable.banana_pic, R.drawable.cherry_pic, R.drawable.grape_pic,
+        R.drawable.mango_pic, R.drawable.orange_pic, R.drawable.pear_pic, R.drawable.pineapple_pic,
+        R.drawable.strawberry_pic, R.drawable.watermelon_pic
+};
+
+private String[] chineseNames = new String[]{
+        "苹果", "香蕉", "樱桃", "葡萄", "芒果", "橙子", "梨", "菠萝", "草莓", "西瓜",
+};
+
+private String[] englishNames = new String[]{
+        "apple", "banana", "cherry", "grape", "mango", "orange", "pear", "pineapple", "strawberry", "watermelon",
+};
+
+private Fruit[] fruits;
+private ListView listView;
+
+private List<Fruit> fruitList = new ArrayList<>();
+
+@Override
+protected void onCreate(Bundle savedInstanceState) {
+    super.onCreate(savedInstanceState);
+    supportRequestWindowFeature(Window.FEATURE_NO_TITLE);
+    setContentView(R.layout.activity_main);
+
+    initFruits();
+    FruitAdapter fruitAdapter = new FruitAdapter(MainActivity.this, R.layout.fruit_item, fruitList);
+    listView = findViewById(R.id.list_view);
+    listView.setAdapter(fruitAdapter); 
+}
+
+private void initFruits() {
+    fruits = new Fruit[imagesId.length];
+    for (int i = 0; i < imagesId.length; ++i) {
+        fruits[i] = new Fruit(imagesId[i], englishNames[i], chineseNames[i]);
+    }
+
+    listInit();
+}
+
+public void listInit() {
+    for (int i = 0; i < fruits.length; ++i) {
+        fruitList.add(fruits[i]);
+    }
+}
+```
+
+三、修改代码，使之能够实现如下功能：（10 分）
+
+- 点击中文名称，Toast 提示信息为当前水果的中文名称
+- 点击水果图片，提示“You click the image of ”+水果英文名称
+- 点击其它地方则提示水果的英文名称。
+
+1. 为 listView 中的子控件添加点击事件
+
+```java
+listView.setOnItemClickListene() 为 listView 中的子控件添加点击事件
+```
+
+2. 获取自定义控件中的子控件，再为其添加点击事件
+
+```java
+view.findViewById() 获取自定义控件中的子控件，再为其添加点击事件
+```
+
+```java
+listView.setOnItemClickListener(new AdapterView.OnItemClickListener() {
+    @Override
+    public void onItemClick(AdapterView<?> adapterView, View view, int pos, long id) {
+        Fruit fruit = fruitList.get(pos);
+
+        view.findViewById(R.id.fruit_image).setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View view) {
+                Toast.makeText(MainActivity.this, "You click image of " + fruit.getEnglishName(), Toast.LENGTH_SHORT).show();
+            }
+        });
+
+        view.findViewById(R.id.fruit_english_name).setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View view) {
+                Toast.makeText(MainActivity.this, fruit.getEnglishName(), Toast.LENGTH_SHORT).show();
+            }
+        });
+
+        view.findViewById(R.id.fruit_chinese_name).setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View view) {
+                Toast.makeText(MainActivity.this, fruit.getChineseName(), Toast.LENGTH_SHORT).show();
+            }
+        });
+
+        Toast.makeText(MainActivity.this, fruit.getEnglishName(), Toast.LENGTH_SHORT).show();
+    }
+});
+```
+
+四、修改布局及源代码实现搜索功能。（10 分）
+
+- 增加一行搜索相关的组件，包括一个 TextView 显示“关键字：”，一个文本输入框用于输入搜索的关键字，一个“搜索”按钮
+- 输入搜索关键字，点击搜索按钮，可以检索中文水果名称/英文水果名称中含有该关键字的水果并显示在列表中
+- 如果关键字输入框内没有输入任何内容，点击“搜索”按钮则显示所有水果信息。
+
+1. 添加搜索栏
+
+```xml
+<LinearLayout
+    android:id="@+id/search_bar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/search_bar_text" />
+
+    <EditText
+        android:id="@+id/search_bar_content"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+
+    <Button
+        android:id="@+id/search_bar_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/search_bar_button" />
+
+</LinearLayout>
+```
+
+2. 为搜索按钮添加点击事件，search() 方法实现搜索功能
+
+- fruitList.clear(); 先清空原列表
+- if (text.equals("")) listInit(); 如果搜索内容为空，恢复原来所有内容
+- 遍历所有水果的中英文，使用 contains() 方法判断是不是搜索的内容
+- 创建适配器，并添加到 ListView 中
+
+```java
+Button btn = findViewById(R.id.search_bar_button);
+btn.setOnClickListener(new View.OnClickListener() {
+    @Override
+    public void onClick(View view) {
+        EditText editText = findViewById(R.id.search_bar_content);
+        search(editText.getText().toString());
+        FruitAdapter fruitAdapter = new FruitAdapter(MainActivity.this, R.layout.fruit_item, fruitList);
+        listView.setAdapter(fruitAdapter);
+    }
+});
+
+public void search(String text) {
+    fruitList.clear();
+
+    if (text.equals("")) listInit();
+    else {
+        boolean[] vis = new boolean[imagesId.length];
+
+        for (int i = 0; i < englishNames.length; ++i) {
+            if (englishNames[i].contains(text)) {
+                vis[i] = true;
+                fruitList.add(fruits[i]);
+            }
+        }
+
+        for (int i = 0; i < chineseNames.length; ++i) {
+            if (vis[i]) continue;
+            if (chineseNames[i].contains(text)) {
+                fruitList.add(fruits[i]);
+            }
+        }
+
+    }
+}
+```
+
+#### 效果截图
+
+<img src="http://blog.lllllan.cn/usr/uploads/2021/10/3601311794.png" width=200>
+<img src="http://blog.lllllan.cn/usr/uploads/2021/10/1317930846.png" width=200>
+<img src="http://blog.lllllan.cn/usr/uploads/2021/10/3663940067.png" width=200>
+<img src="http://blog.lllllan.cn/usr/uploads/2021/10/3857681085.png" width=200>
+<img src="http://blog.lllllan.cn/usr/uploads/2021/10/1230777497.png" width=200>
+  
+#### 问题分析与总结
+
+一、图片、中英文名点击之后，出现名字错误、点不到图片的情况
+
+原因：子控件的获取出错 findViewById()
+解决：通过 view.findViewById() 获取子控件中的子控件
+
+```java
+public void onItemClick(AdapterView<?> adapterView, View view, int pos, long id) {
+    Fruit fruit = fruitList.get(pos);
+
+    view.findViewById(R.id.fruit_image).setOnClickListener(new View.OnClickListener() {
+        @Override
+        public void onClick(View view) {
+            Toast.makeText(MainActivity.this, "You click image of " + fruit.getEnglishName(), Toast.LENGTH_SHORT).show();
+        }
+    }); 
+}
+```
+
+二、点击搜索按钮后，有响应，但是速度很慢
+
+原因：修改了 fruitlist 之后，没有及时更新到 ListView 中
+解决：每次按钮点击之后，重新创建适配器并添加到 ListView 中
+
+```java
+FruitAdapter fruitAdapter = new FruitAdapter(MainActivity.this, R.layout.fruit_item, fruitList);
+listView.setAdapter(fruitAdapter);
+```
