--- a/JSP/lab07/2019212212236_苏桐渤.md
+++ b/JSP/lab07/2019212212236_苏桐渤.md
@@ -106,3 +106,8 @@
 ```
 
 ## 总结与问题分析
+
+1. 将获取内容添加到表格当中：
+
+- （虽然内容是我们自己写的），为了方便我们还是希望能根据数据的条数，“动态”地添加到表格当中
+- 在html语言中要添加表格行列的地方中，插入 `<% for (int i = 0; i < names.size(); ++i) %>`，表示让其执行该循环，一次加入数据内容
