修改数据库表

--- a/火车售票管理系统/数据库表.md
+++ b/火车售票管理系统/数据库表.md
@@ -6,6 +6,7 @@
 | :-------: | :-----: | :---: | :---------------------------------------------: |
 |  user_id  |   int   |  是   |                    用户编号                     |
 | user_tel  |   int   |  是   |                  用户手机号码                   |
+| user_name | varchar |  否   |                    用户昵称                     |
 | user_type | varchar |  否   | 用户类型【普通用户 \| VIP用户 \| 管理员 \| 等】 |
 | user_pwd  | varchar |  否   |                    用户密码                     |
 
