--- a/火车售票管理系统/数据库表.md
+++ b/火车售票管理系统/数据库表.md
@@ -1,84 +1,101 @@
 
 #### 用户信息表
 
+|      名称      |  类型   | 主键  |                      注释                       |
+| :------------: | :-----: | :---: | :---------------------------------------------: |
+| **user_keyid** |   int   |  是   |                    用户编号                     |
+|    user_tel    |   int   |  是   |                  用户手机号码                   |
+|   user_name    | varchar |  否   |                    用户昵称                     |
+|   user_type    | varchar |  否   | 用户类型【普通用户 \| VIP用户 \| 管理员 \| 等】 |
+|    user_pwd    | varchar |  否   |                    用户密码                     |
 
-|   名称    |  类型   | 主键  |                      注释                       |
-| :-------: | :-----: | :---: | :---------------------------------------------: |
-|  user_id  |   int   |  是   |                    用户编号                     |
-| user_tel  |   int   |  是   |                  用户手机号码                   |
-| user_name | varchar |  否   |                    用户昵称                     |
-| user_type | varchar |  否   | 用户类型【普通用户 \| VIP用户 \| 管理员 \| 等】 |
-| user_pwd  | varchar |  否   |                    用户密码                     |
+
+#### 乘客类型表
+
+|           名称           |  类型   | 主键  |                    注释                    |
+| :----------------------: | :-----: | :---: | :----------------------------------------: |
+| **passenger_type_keyid** |   int   |  是   |                乘客类型编号                |
+|   passenger_type_name    | varchar |  否   | 乘客类型名称【成人 \| 儿童 \| 军人 \| 等】 |
+|         discount         |   int   |  否   |                   折扣%                    |
 
 #### 乘客信息表
 
-
-|           名称           |  类型   | 主键  |                  注释                  |
-| :----------------------: | :-----: | :---: | :------------------------------------: |
-|       passenger_id       |   int   |  是   |                乘客编号                |
-| passenger_license_number | varchar |  是   |                 证件号                 |
-|  passenger_license_type  | varchar |  否   |                证件类型                |
-|      passenger_name      | varchar |  否   |                乘客姓名                |
-|      passenger_type      | varchar |  否   | 乘客类型【成人 \| 儿童 \| 军人 \| 等】 |
-|     passenger_limit      | varchar |  否   |    乘客权限【正常 \| 限制 \| 禁止】    |
+|           名称           |  类型   | 主键  |               注释               |
+| :----------------------: | :-----: | :---: | :------------------------------: |
+|   **passenger_keyid**    |   int   |  是   |             乘客编号             |
+| passenger_license_number | varchar |  是   |              证件号              |
+|  passenger_license_type  | varchar |  否   |             证件类型             |
+|      passenger_name      | varchar |  否   |             乘客姓名             |
+| **passenger_type_keyid** |   int   |  否   |           乘客类型编号           |
+|     passenger_limit      | varchar |  否   | 乘客权限【正常 \| 限制 \| 禁止】 |
 
 #### 用户-乘客对应表
 
-|     名称     | 类型  | 主键  |   注释   |
-| :----------: | :---: | :---: | :------: |
-|   user_id    |  int  |  否   | 用户编号 |
-| passenger_id |  int  |  否   | 乘客编号 |
+|        名称         | 类型  | 主键  |   注释   |
+| :-----------------: | :---: | :---: | :------: |
+|   **user_keyid**    |  int  |  否   | 用户编号 |
+| **passenger_keyid** |  int  |  否   | 乘客编号 |
 
 
 #### 列车信息表
 
-|           名称            |  类型   | 主键  |                       注释                       |
-| :-----------------------: | :-----: | :---: | :----------------------------------------------: |
-|         train_id          |   int   |  是   |                     列车编号                     |
-|        train_type         | varchar |  否   | 列车类型【动车 \| 高铁 \| 城际列车 \| 直达列车】 |
-|  train_departure_station  | varchar |  否   |                      始发站                      |
-| train_destination_station | varchar |  否   |                      目的站                      |
+|           名称            |  类型   | 主键  |                          注释                          |
+| :-----------------------: | :-----: | :---: | :----------------------------------------------------: |
+|      **trai_keyid**       |   int   |  是   |                        列车编号                        |
+|        train_type         | varchar |  否   | 列车类型【动车 \| 高铁 \| 城际列车 \| 直达列车 \| 等】 |
+|  train_departure_station  | varchar |  否   |                         始发站                         |
+| train_destination_station | varchar |  否   |                         目的站                         |
 
-#### 往返时刻表
+#### 列车往返时刻表
 
 
-|      名称       |   类型   | 主键  |           注释           |
-| :-------------: | :------: | :---: | :----------------------: |
-|  round_trip_id  |   int    |  是   |         往返编号         |
-|    train_id     |   int    |  否   |         列车编号         |
-| round_trip_type | varchar  |  否   | 往返类型【启程 \| 返程】 |
-| departure_time  | datetime |  否   |         发车时间         |
-|   arrive_time   | datetime |  否   |         到达时间         |
+|         名称         |   类型   | 主键  |           注释           |
+| :------------------: | :------: | :---: | :----------------------: |
+| **round_trip_keyid** |   int    |  是   |         往返编号         |
+|   **train_keyid**    |   int    |  否   |         列车编号         |
+|   round_trip_type    | varchar  |  否   | 往返类型【启程 \| 返程】 |
+|    departure_time    | datetime |  否   |         发车时间         |
+|     arrive_time      | datetime |  否   |         到达时间         |
 
 #### 车次信息表
 
 
-|            名称             |  类型   | 主键  |                   注释                   |
-| :-------------------------: | :-----: | :---: | :--------------------------------------: |
-|       train_number_id       |   int   |  是   |                 车次编号                 |
-|        round_trip_id        |   int   |  否   |                 往返编号                 |
-| train_number_departure_date |  date   |  否   |                 发车日期                 |
-|   train_number_car_number   |   int   |  否   |                  车箱数                  |
-|     train_number_state      | varchar |  否   | 状态【未开始 \| 延误 \| 运行 \| 已完成】 |
+|            名称             |   类型   | 主键  |                       注释                       |
+| :-------------------------: | :------: | :---: | :----------------------------------------------: |
+|   **train_number_keyid**    |   int    |  是   |                     车次编号                     |
+|    **round_trip_keyid**     |   int    |  否   |                     往返编号                     |
+| train_number_departure_time | datetime |  否   |  实际发车日期和时间（延误或取消需要修改该时间）  |
+|     train_number_state      | varchar  |  否   | 状态【未开始 \| 延误 \| 取消 \| 运行 \| 已完成】 |
+
+#### 车次车厢表
+
+
+|          名称           |  类型   | 主键  |                                          注释                                          |
+| :---------------------: | :-----: | :---: | :------------------------------------------------------------------------------------: |
+|   **seat_car_keyid**    |   int   |  是   |                                        车厢编号                                        |
+| **train_number_keyid**  |   int   |  否   |                                        车次编号                                        |
+|       seat_car_id       |   int   |  否   |                                         车厢号                                         |
+|      seat_car_type      | varchar |  否   | 车厢类型【硬座 \| 软座 \| 硬卧 \| 软卧 \| 一等 \| 二等 \| 等等】（直接决定了座位类型） |
+| seat_car_price_per_seat |   int   |  否   |                                  车厢中每个座位的单价                                  |
 
 #### 车次座位表
 
+对应每次车次，具体每个座位的出售状态
 
-|      名称       |  类型   | 主键  |                               注释                               |
-| :-------------: | :-----: | :---: | :--------------------------------------------------------------: |
-|     seat_id     |   int   |  是   |                             座位编号                             |
-| train_number_id |   int   |  否   |                             车次编号                             |
-|    seat_type    | varchar |  否   | 座位类型【硬座 \| 软座 \| 硬卧 \| 软卧 \| 一等 \| 二等 \| 等等】 |
-|   seat_car_id   |   int   |  否   |                              车厢号                              |
-|  seat_seat_id   | varchar |  否   |                    座位号【1A  \| 1B \| 等】                     |
-|   seat_state    | varchar |  否   |                 座位状态【可售 \| 禁止 \| 已售】                 |
+
+|        名称        |  类型   | 主键  |               注释               |
+| :----------------: | :-----: | :---: | :------------------------------: |
+|   **seat_keyid**   |   int   |  是   |           车次座位编号           |
+| **seat_car_keyid** |   int   |  是   |             车厢编号             |
+|      seat_id       | varchar |  否   |    座位号【1A  \| 1B \| 等】     |
+|     seat_state     | varchar |  否   | 座位状态【可售 \| 禁止 \| 已售】 |
 
 #### 订单表
 
 
-|     名称     | 类型  | 主键  |       注释       |
-| :----------: | :---: | :---: | :--------------: |
-|   order_id   |  int  |  是   |     订单编号     |
-|   user_id    |  int  |  否   | 用户编号（购票人 |
-| passenger_id |  int  |  否   | 乘客编号（乘车人 |
-|   seat_id    |  int  |  否   |     座位编号     |
+|        名称         | 类型  | 主键  |       注释       |
+| :-----------------: | :---: | :---: | :--------------: |
+|   **order_keyid**   |  int  |  是   |     订单编号     |
+|   **user_keyid**    |  int  |  否   | 用户编号（购票人 |
+| **passenger_keyid** |  int  |  否   | 乘客编号（乘车人 |
+|   **seat_keyid**    |  int  |  否   |     座位编号     |
