重写数据库表(60%)

--- a/火车售票管理系统/数据库表.md
+++ b/火车售票管理系统/数据库表.md
@@ -1,101 +1,154 @@
 
-#### 用户信息表
 
-|      名称      |  类型   | 主键  |                      注释                       |
-| :------------: | :-----: | :---: | :---------------------------------------------: |
-| **user_keyid** |   int   |  是   |                    用户编号                     |
-|    user_tel    |   int   |  是   |                  用户手机号码                   |
-|   user_name    | varchar |  否   |                    用户昵称                     |
-|   user_type    | varchar |  否   | 用户类型【普通用户 \| VIP用户 \| 管理员 \| 等】 |
-|    user_pwd    | varchar |  否   |                    用户密码                     |
+<!-- ## [ER图绘制](https://gitmind.cn/app/flowchart/a135b9326c2bbe415101bfefd7470cfb) -->
 
+## 用户相关
 
-#### 乘客类型表
+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
-|           名称           |  类型   | 主键  |                    注释                    |
-| :----------------------: | :-----: | :---: | :----------------------------------------: |
-| **passenger_type_keyid** |   int   |  是   |                乘客类型编号                |
-|   passenger_type_name    | varchar |  否   | 乘客类型名称【成人 \| 儿童 \| 军人 \| 等】 |
-|         discount         |   int   |  否   |                   折扣%                    |
+#### <span id="user_info">用户信息表 user_info</span>
 
-#### 乘客信息表
+|     字段名称     | 字段类型 | 是否主键 | 是否外键 | 是否为空 |   字段含义   |                备注                 |
+| :--------------: | :------: | :------: | :------: | :------: | :----------: | :---------------------------------: |
+|   **user_id**    |   int    |    是    |          |          |   用户编号   |               自增id                |
+|  user_telephone  |   int    |    是    |          |          | 用户手机号码 |                                     |
+|  user_password   | varchar  |          |          |          |   用户密码   |              长度6-18               |
+|    user_name     | varchar  |          |          |          |   用户昵称   |       长度1-10，避免特殊字符        |
+|    user_group    | varchar  |          |          |          |   用户组别   | 普通用户 \| VIP用户 \| 管理员 \| 等 |
+|    user_state    | varchar  |          |          |          |   用户状态   |          正常、冻结、关闭           |
+| user_create_time |   date   |          |          |          | 用户创建时间 |             yyyy-mm-dd              |
 
-|           名称           |  类型   | 主键  |               注释               |
-| :----------------------: | :-----: | :---: | :------------------------------: |
-|   **passenger_keyid**    |   int   |  是   |             乘客编号             |
-| passenger_license_number | varchar |  是   |              证件号              |
-|  passenger_license_type  | varchar |  否   |             证件类型             |
-|      passenger_name      | varchar |  否   |             乘客姓名             |
-| **passenger_type_keyid** |   int   |  否   |           乘客类型编号           |
-|     passenger_limit      | varchar |  否   | 乘客权限【正常 \| 限制 \| 禁止】 |
+#### <span id="passenger_info">乘客信息表 passenger_info</span>
 
-#### 用户-乘客对应表
+|       字段名称        | 字段类型 | 是否主键 |                是否外键                | 是否为空 |   字段含义   |         备注         |
+| :-------------------: | :------: | :------: | :------------------------------------: | :------: | :----------: | :------------------: |
+|   **passenger_id**    |   int    |    是    |                                        |          |   乘客编号   |        自增id        |
+| passenger_resident_id | varchar  |    是    |                                        |          |  居民身份证  |                      |
+|    passenger_name     | varchar  |          |                                        |          |   乘客姓名   |                      |
+|  *passenger_type_id*  |   int    |          | [乘客类型编码表](#passenger_type_info) |          | 乘客类型编号 |                      |
+|    *profession_id*    |   int    |          |     [职业编码表](#profession_info)     |    是    |   职业编号   |                      |
+|    passenger_state    | varchar  |          |                                        |          |   乘客状态   | 正常 \| 限制 \| 禁止 |
 
-|        名称         | 类型  | 主键  |   注释   |
-| :-----------------: | :---: | :---: | :------: |
-|   **user_keyid**    |  int  |  否   | 用户编号 |
-| **passenger_keyid** |  int  |  否   | 乘客编号 |
+#### <span id="user_passenger_relationship">用户-乘客关系表 user_passenger_relationship</span>
 
+|    字段名称    | 字段类型 | 是否主键 |           是否外键            | 是否为空 | 字段含义 | 备注  |
+| :------------: | :------: | :------: | :---------------------------: | :------: | :------: | :---: |
+|   *user_id*    |   int    |          |   [用户信息表](#user_info)    |          | 用户编号 |       |
+| *passenger_id* |   int    |          | [乘客信息表](#passenger_info) |          | 乘客编号 |       |
 
-#### 列车信息表
+#### <span id="passenger_type_info">乘客类型编码表 passenger_type_info</span>
 
-|           名称            |  类型   | 主键  |                          注释                          |
-| :-----------------------: | :-----: | :---: | :----------------------------------------------------: |
-|      **trai_keyid**       |   int   |  是   |                        列车编号                        |
-|        train_type         | varchar |  否   | 列车类型【动车 \| 高铁 \| 城际列车 \| 直达列车 \| 等】 |
-|  train_departure_station  | varchar |  否   |                         始发站                         |
-| train_destination_station | varchar |  否   |                         目的站                         |
+|       字段名称        | 字段类型 | 是否主键 | 是否外键 | 是否为空 |   字段含义   |            备注            |
+| :-------------------: | :------: | :------: | :------: | :------: | :----------: | :------------------------: |
+| **passenger_type_id** |   int    |    是    |          |          | 乘客类型编号 |           自增id           |
+|  passenger_type_name  | varchar  |    是    |          |          | 乘客类型名称 | 成人 \| 儿童 \| 军人 \| 等 |
+|       discount        |   int    |          |          |          |    折扣%     |                            |
 
-#### 列车往返时刻表
+#### <span id="profession_info">职业编码表 profession_info</span>
 
+|     字段名称      | 字段类型 | 是否主键 | 是否外键 | 是否为空 | 字段含义 |  备注  |
+| :---------------: | :------: | :------: | :------: | :------: | :------: | :----: |
+| **profession_id** |   int    |    是    |          |          | 职业编号 | 自增id |
+|  profession_name  | varchar  |    是    |          |          | 职业名称 |        |
 
-|         名称         |   类型   | 主键  |           注释           |
-| :------------------: | :------: | :---: | :----------------------: |
-| **round_trip_keyid** |   int    |  是   |         往返编号         |
-|   **train_keyid**    |   int    |  否   |         列车编号         |
-|   round_trip_type    | varchar  |  否   | 往返类型【启程 \| 返程】 |
-|    departure_time    | datetime |  否   |         发车时间         |
-|     arrive_time      | datetime |  否   |         到达时间         |
+## 车站相关
 
-#### 车次信息表
+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
+#### <span id="province_info">省份编码表 province_info</span>
 
-|            名称             |   类型   | 主键  |                       注释                       |
-| :-------------------------: | :------: | :---: | :----------------------------------------------: |
-|   **train_number_keyid**    |   int    |  是   |                     车次编号                     |
-|    **round_trip_keyid**     |   int    |  否   |                     往返编号                     |
-| train_number_departure_time | datetime |  否   |  实际发车日期和时间（延误或取消需要修改该时间）  |
-|     train_number_state      | varchar  |  否   | 状态【未开始 \| 延误 \| 取消 \| 运行 \| 已完成】 |
+|    字段名称     | 字段类型 | 是否主键 | 是否外键 | 是否为空 | 字段含义 |  备注  |
+| :-------------: | :------: | :------: | :------: | :------: | :------: | :----: |
+| **province_id** |   int    |    是    |          |          | 省份编号 | 自增id |
+|  province_name  | varchar  |    是    |          |          | 省份名称 |        |
 
-#### 车次车厢表
+#### <span id="city_info">城市编码表 city_info</span>
 
+|   字段名称    | 字段类型 | 是否主键 |           是否外键           | 是否为空 | 字段含义 |  备注  |
+| :-----------: | :------: | :------: | :--------------------------: | :------: | :------: | :----: |
+|  **city_id**  |   int    |    是    |                              |          | 城市编号 | 自增id |
+| *province_id* |   int    |          | [省份编码表](#province_info) |          | 省份编号 |        |
+|   city_name   | varchar  |    是    |                              |          | 城市名称 |        |
 
-|          名称           |  类型   | 主键  |                                          注释                                          |
-| :---------------------: | :-----: | :---: | :------------------------------------------------------------------------------------: |
-|   **seat_car_keyid**    |   int   |  是   |                                        车厢编号                                        |
-| **train_number_keyid**  |   int   |  否   |                                        车次编号                                        |
-|       seat_car_id       |   int   |  否   |                                         车厢号                                         |
-|      seat_car_type      | varchar |  否   | 车厢类型【硬座 \| 软座 \| 硬卧 \| 软卧 \| 一等 \| 二等 \| 等等】（直接决定了座位类型） |
-| seat_car_price_per_seat |   int   |  否   |                                  车厢中每个座位的单价                                  |
+#### <span id="train_station_info">火车站编码表 train_station_info</span>
 
-#### 车次座位表
+|       字段名称       | 字段类型 | 是否主键 |         是否外键         | 是否为空 |  字段含义  |  备注  |
+| :------------------: | :------: | :------: | :----------------------: | :------: | :--------: | :----: |
+| **train_station_id** |   int    |    是    |                          |          | 火车站编号 | 自增id |
+| *train_station_city* | varchar  |          | [城市编码表](#city_info) |          |  所在城市  |        |
+|  train_station_name  | varchar  |    是    |                          |          | 火车站名称 |        |
 
-对应每次车次，具体每个座位的出售状态
+## 火车相关
 
+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
-|        名称        |  类型   | 主键  |               注释               |
-| :----------------: | :-----: | :---: | :------------------------------: |
-|   **seat_keyid**   |   int   |  是   |           车次座位编号           |
-| **seat_car_keyid** |   int   |  是   |             车厢编号             |
-|      seat_id       | varchar |  否   |    座位号【1A  \| 1B \| 等】     |
-|     seat_state     | varchar |  否   | 座位状态【可售 \| 禁止 \| 已售】 |
+#### <span id="train_info">火车信息表 train_info</span>
 
-#### 订单表
+|    字段名称     | 字段类型 | 是否主键 |              是否外键              | 是否为空 |   字段含义   |  备注  |
+| :-------------: | :------: | :------: | :--------------------------------: | :------: | :----------: | :----: |
+|  **train_id**   |   int    |    是    |                                    |          |   火车编号   | 自增id |
+| *train_type_id* | varchar  |          | [火车类型编码表](#train_type_info) |          | 火车类型编号 |        |
 
+#### <span id="train_type_info">火车类型编码表 train_type_info</span>
 
-|        名称         | 类型  | 主键  |       注释       |
-| :-----------------: | :---: | :---: | :--------------: |
-|   **order_keyid**   |  int  |  是   |     订单编号     |
-|   **user_keyid**    |  int  |  否   | 用户编号（购票人 |
-| **passenger_keyid** |  int  |  否   | 乘客编号（乘车人 |
-|   **seat_keyid**    |  int  |  否   |     座位编号     |
+|     字段名称      | 字段类型 | 是否主键 | 是否外键 | 是否为空 |   字段含义   |  备注  |
+| :---------------: | :------: | :------: | :------: | :------: | :----------: | :----: |
+| **train_type_id** |   int    |    是    |          |          | 火车类型编号 | 自增id |
+|  train_type_name  | varchar  |    是    |          |          | 火车类型名称 |        |
+
+#### <span id="train_round_trip_timetable">火车往返时刻表 train_round_trip_timetable</span>
+
+|         字段名称         | 字段类型 | 是否主键 |              是否外键               | 是否为空 |  字段含义  |  备注  |
+| :----------------------: | :------: | :------: | :---------------------------------: | :------: | :--------: | :----: |
+| **train_round_trip_id**  |   int    |    是    |                                     |          |  往返编号  | 自增id |
+|        *train_id*        |   int    |          |      [火车信息表](#train_info)      |          |  火车编号  |        |
+|  *departure_station_id*  |   int    |          | [火车站编码表](#train_station_info) |          | 始发站编号 |        |
+| *destination_station_id* |   int    |          | [火车站编码表](#train_station_info) |          | 目的站编号 |        |
+|      departure_time      | datetime |          |                                     |          |  发车时间  |        |
+|       arrive_time        | datetime |          |                                     |          |  到达时间  |        |
+
+#### <span id="train_running_timetable">火车运行时刻表 train_running_timetable</span>
+
+|       字段名称        | 字段类型 | 是否主键 |                   是否外键                    | 是否为空 |       字段含义       |                      备注                      |
+| :-------------------: | :------: | :------: | :-------------------------------------------: | :------: | :------------------: | :--------------------------------------------: |
+| **train_running_id**  |   int    |    是    |                                               |          |     火车运行编号     |                     自增id                     |
+| *train_round_trip_id* |   int    |          | [火车往返时刻表](#train_round_trip_timetable) |          |     火车往返编号     |                                                |
+|    departure_time     | datetime |          |                                               |          | 预计 or 实际发车时间 | 初始为往返时刻表的发车时间，若火车晚点需要修改 |
+|  train_running_state  | varchar  |          |                                               |          |         状态         |   未开始 \| 晚点 \| 取消 \| 运行中 \| 已完成   |
+
+## 车厢座位相关
+
+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+
+#### <span id="cabin_type_info">车厢类型编码表 cabin_type_info<span>
+
+|     字段名称      | 字段类型 | 是否主键 |              是否外键              | 是否为空 |        字段含义        |                        备注                        |
+| :---------------: | :------: | :------: | :--------------------------------: | :------: | :--------------------: | :------------------------------------------------: |
+| **cabin_type_id** |   int    |    是    |                                    |          |      车厢类型编号      |                       自增id                       |
+|  *train_type_id*  |   int    |          | [火车类型编码表](#train_type_info) |          |      火车类型编号      |                                                    |
+|  cabin_type_name  | varchar  |          |                                    |          |      车厢类型名称      | 硬座 \| 软座 \| 硬卧 \| 软卧 \| 一等 \| 二等 \| 等 |
+| max_seats_amount  |   int    |          |                                    |          | 单个车厢中最大座位数量 |                                                    |
+
+#### <span id="cabin_info">车厢信息表 cabin_info</span>
+
+|      字段名称      | 字段类型 | 是否主键 |                  是否外键                  | 是否为空 |   字段含义   |                   备注                   |
+| :----------------: | :------: | :------: | :----------------------------------------: | :------: | :----------: | :--------------------------------------: |
+|    **cabin_id**    |   int    |    是    |                                            |          |   车厢编号   |                  自增id                  |
+| *train_running_id* |   int    |          | [火车运行时刻表](#train_running_timetable) |          | 火车运行编号 |                                          |
+|  *cabin_type_id*   |   int    |          |     [车厢类型编码表](#cabin_type_info)     |          | 车厢类型编号 |                                          |
+|    cabin_number    |   int    |          |                                            |          |    车厢号    | 编号是表的主键，车厢号是单列火车中的序号 |
+
+#### <span id="">座位类型编码表</span>
+
+|     字段名称     | 字段类型 | 是否主键 | 是否外键 | 是否为空 |   字段含义   |  备注  |
+| :--------------: | :------: | :------: | :------: | :------: | :----------: | :----: |
+| **seat_type_id** |   int    |    是    |          |          | 座位类型编号 | 自增id |
+| seat_type_number |   int    |          |          |          |
+
+#### <span id="seat_info">座位信息表 seat_info</span>
+
+|  字段名称   | 字段类型 | 是否主键 |         是否外键          | 是否为空 | 字段含义 |          备注          |
+| :---------: | :------: | :------: | :-----------------------: | :------: | :------: | :--------------------: |
+| **seat_id** |   int    |    是    |                           |          | 座位编号 |         自增id         |
+| *cabin_id*  |   int    |          | [车厢信息表](#cabin_info) |          | 车厢编号 |                        |
+| seat_price  |   int    |          |                           |          | 座位单价 | 特殊乘客用单价乘以折扣 |
