抽屉中表单布局了部分

--- a/火车售票管理系统/数据库/数据库表.md
+++ b/火车售票管理系统/数据库/数据库表.md
@@ -22,7 +22,7 @@
 | user_telephone |   int    |          |          |          | 用户手机号码 |                                     |
 | user_password  | varchar  |          |          |          |   用户密码   |              长度6-18               |
 |   user_name    | varchar  |          |          |          |   用户昵称   |       长度1-10，避免特殊字符        |
-|   user_group   | varchar  |          |          |          |   用户组别   | 普通用户 \| VIP用户 \| 管理员 \| 等 |
+|   user_type    | varchar  |          |          |          |   用户类型   | 普通用户 \| VIP用户 \| 管理员 \| 等 |
 |   user_state   | varchar  |          |          |          |   用户状态   |          正常、冻结、注销           |
 |  create_time   |   date   |          |          |          | 用户创建时间 |             yyyy-mm-dd              |
 
