完成android-lab09，差个实验报告

--- a/Android/tips/右上角菜单.md
+++ b/Android/tips/右上角菜单.md
@@ -2,13 +2,13 @@
 
 
 
-![image-20211111000944256](D:\2021-2022-1\Android\tips\右上角菜单.assets\image-20211111000944256.png)
+![image-20211111000944256](右上角菜单.assets\image-20211111000944256.png)
 
 
 
 1. 在res文件夹下新建文件夹 `menu`，对其右键新建 `menu.xml`
 
-![image-20211111001045355](D:\2021-2022-1\Android\tips\右上角菜单.assets\image-20211111001045355.png)
+![image-20211111001045355](右上角菜单.assets\image-20211111001045355.png)
 
 2. 在`menu.xml`中加入你想要的按钮
 
