android实验报告写了一半

--- a/Android/lab09/2019212212236_苏桐渤.md
+++ b/Android/lab09/2019212212236_苏桐渤.md
@@ -33,7 +33,115 @@
 
 
 
+#### 一、布置两个活动页面的基本样式
 
+
+
+1. 主活动页面中添加标题栏右上角的菜单。
+
+    - 在 `res` 目录下新建 `menu` 目录，对其右键生成`menu.xml`
+
+    ![image-20211111164128473](D:\2021-2022-1\Android\lab09\2019212212236_苏桐渤.assets\image-20211111164128473.png)
+
+    - 文件中添加两个选项 `Add` 和 `Delete`
+
+    
+
+    ![image-20211111164354005](D:\2021-2022-1\Android\lab09\2019212212236_苏桐渤.assets\image-20211111164354005.png)
+
+    ```java
+    <?xml version="1.0" encoding="utf-8"?>
+    <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    
+        <item
+            android:id="@+id/menu_item_add"
+            android:title="Add" />
+    
+        <item
+            android:id="@+id/menu_item_del"
+            android:title="Delete" />
+    
+    </menu>
+    ```
+
+    
+
+2. 新建活动页面 `NewContactActivity`，在页面布局文件中添加对应的布局
+
+![image-20211111164755587](D:\2021-2022-1\Android\lab09\2019212212236_苏桐渤.assets\image-20211111164755587.png)
+
+```java
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".NewContactActivity"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:text="姓名：" />
+
+        <EditText
+            android:id="@+id/new_contact_edittext_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:text="手机号：" />
+
+        <EditText
+            android:id="@+id/new_contact_edittext_tel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/new_contact_button_add"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="添加" />
+
+</LinearLayout>
+```
+
+3. 为主活动页面中的 `Add` 按钮添加点击事件，确保能打开另一个活动页面
+    - 重写 `onOptionsItemSelected` 方法，实现活动页面之间的跳转
+
+```java
+@Override
+public boolean onOptionsItemSelected(@NonNull MenuItem item) {
+    switch (item.getItemId()) {
+        case R.id.menu_item_add:
+            // 跳转到添加联系人页面。
+            Intent intent = new Intent(MainActivity.this, NewContactActivity.class);
+            startActivity(intent);
+            break;
+        case R.id.menu_item_del
+            break;
+    }
+    return super.onOptionsItemSelected(item);
+}
+```
+
+
+
+​	
 
 ## 问题分析与总结
 
