增加‘添加火车’页面

--- a/火车售票管理系统/数据库/数据库表.md
+++ b/火车售票管理系统/数据库/数据库表.md
@@ -156,7 +156,7 @@
 |       字段名称        | 字段类型 | 是否主键 |                   是否外键                    | 是否为空 |       字段含义       |                      备注                      |
 | :-------------------: | :------: | :------: | :-------------------------------------------: | :------: | :------------------: | :--------------------------------------------: |
 | **train_running_id**  |   int    |    是    |                                               |          |     火车运行编号     |                     自增id                     |
-| *train_round_trip_id* |   int    |          | [火车往返时刻表](#train_round_trip_timetable) |          |     火车往返编号     |                                                |
+| *train_round_trip_id* |   int    |          | [火车往返时刻表](#train_round_trip_timetable) |          |    火车往返编号+     |                                                |
 |    departure_time     | datetime |          |                                               |          | 预计 or 实际发车时间 | 初始为往返时刻表的发车时间，若火车晚点需要修改 |
 |  train_running_state  | varchar  |          |                                               |          |     火车运行状态     |   未开始 \| 晚点 \| 取消 \| 运行中 \| 已完成   |
 
